Actualizar menu.html

--- a/menu.html
+++ b/menu.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explora el menú de Los chicos argentinos con platos tradicionales.">
     <title>Menú - Los chicos argentinos</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-    <a href="index.html"><img src="logo.png" alt="Logo"></a>
-</div>
+            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+        </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -36,18 +37,22 @@
                     <ul>
                         <li>
                             <h3>Empanadas Criollas</h3>
+                            <p>Rellenas de <strong>carne picada</strong>, <strong>cebolla</strong>, <strong>huevo y especias</strong>.</p>
                             <span>€</span>
-                            <h3>Empanadas "Gourmet"</h3>
+                        </li>
+                        <li>
+                            <h3>Empan GAME OVERmet</h3>
+                            <p>Variedad de sabores especiales.</p>
                             <span>€</span>
+                        </li>
+                        <li>
                             <h3>Alitas</h3>
-                            <span>€</span>
-                            <h3></h3>
-                            <p>Rellenas de  <strong>carne picada</strong>, <strong>cebolla</strong>,<strong> huevo y especias.</strong></p>
+                            <p>Con salsa barbacoa o picante.</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Provoleta</h3>
-                            <p>Queso provolone fundido con <strong>orégano y chimichurri.</strong></p>
+                            <p>Queso provolone fundido con <strong>orégano y chimichurri</strong>.</p>
                             <span>€</span>
                         </li>
                     </ul>
@@ -59,14 +64,15 @@
                             <h3>Asado de Tira</h3>
                             <p>Acompañado de papas fritas y ensalada criolla.</p>
                             <span>€</span>
-                         <li>
-                            <h3>Pizzas</h3>
-                            <span>€</span>
                         </li>
+                        <li>
+                            <h3>Pizzas</h3>
+                            <p>Variedad de opciones artesanales.</p>
+                            <span>€</span>
                         </li>
                         <li>
                             <h3>Milanesa Napolitana</h3>
-                            <p>Con<strong>salsa de tomate, mozzarella y guarnición</strong>a elección.</p>
+                            <p>Con <strong>salsa de tomate, mozzarella y guarnición</strong> a elección.</p>
                             <span>€</span>
                         </li>
                     </ul>
@@ -76,22 +82,27 @@
                     <ul>
                         <li>
                             <h3>Alfajores</h3>
-                            <li>
-                                
-                            </li>
+                            <p>Rellenos de <strong>dulce de leche</strong>.</p>
+                            <span>€</span>
+                        </li>
+                        <li>
                             <h3>Facturitas</h3>
+                            <p>1/2 docena a elegir.</p>
+                            <span>€</span>
+                        </li>
+                        <li>
                             <h3>Pastafrola</h3>
-                                <li>
-                                    
-                                </li>
-                            <h3>Mate</h3>
-                                <span>€</span>
-                            <p>Con<strong>1/2 Docena de facturitas a elegir</strong></p>
+                            <p>Rellena de <strong>dulce de membrillo</strong>.</p>
+                            <span>€</span>
+                        </li>
+                        <li>
+                            <h3>Mate con Facturitas</h3>
+                            <p>Con <strong>1/2 docena de facturitas a elegir</strong>.</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Alfajor de Maicena</h3>
-                            <p>Relleno de <strong>dulce de leche y coco rallado.</strong></p>
+                            <p>Relleno de <strong>dulce de leche y coco rallado</strong>.</p>
                             <span>€</span>
                         </li>
                     </ul>
@@ -106,7 +117,7 @@
                         </li>
                         <li>
                             <h3>Fernet con Cola</h3>
-                            <p>Clásico argentino, <strong>servido con hielo.</strong></p>
+                            <p>Clásico argentino, <strong>servido con hielo</strong>.</p>
                             <span>€</span>
                         </li>
                     </ul>
@@ -117,21 +128,21 @@
 
     <footer>
         <div class="footer-contenedor">
-           <div class="footer-logo">
-    <a href="index.html"><img src="logo.png" alt="Logo"></a>
-</div>
+            <div class="footer-logo">
+                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+            </div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya, Olesa de Montserrat, Barcelona</p>
                 <p>Tel: 665641829</p>
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
-    <a href="#"><img src="facebook.png" alt="Facebook"></a>
-    <a href="#"><img src="instagram.png" alt="Instagram"></a>
-    <a href="#"><img src="twitter.png" alt="Twitter"></a>
-</div>
+                <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+            </div>
         </div>
-        <p class="footer-copy">©·2025·Los chcios argentinos·.·Todos los derechos reservados.·</p>
+        <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
     </footer>
 
     <script src="script.js"></script>
