Actualizar menu.html

--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+            <a href="index.html"><img src="logo.png" alt="Logo"></a>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -41,13 +41,13 @@
                             <span>€</span>
                         </li>
                         <li>
-                            <h3>Empan GAME OVERmet</h3>
+                            <h3>Empan "Gourmet"</h3>
                             <p>Variedad de sabores especiales.</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Alitas</h3>
-                            <p>Con salsa barbacoa o picante.</p>
+                            <p>c/verduritas</p>
                             <span>€</span>
                         </li>
                         <li>
@@ -82,17 +82,18 @@
                     <ul>
                         <li>
                             <h3>Alfajores</h3>
-                            <p>Rellenos de <strong>dulce de leche</strong>.</p>
+                            <p>Rellenos de <strong>dulce de leche</strong>y coco rallado.</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Facturitas</h3>
-                            <p>1/2 docena a elegir.</p>
+                            <p>c/Dulce de leche</p>
+                            <p>c/crema pastelera</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Pastafrola</h3>
-                            <p>Rellena de <strong>dulce de membrillo</strong>.</p>
+                            <p>c/<strong>dulce de membrillo</strong>.</p>
                             <span>€</span>
                         </li>
                         <li>
@@ -112,7 +113,9 @@
                     <ul>
                         <li>
                             <h3>Malbec Argentino</h3>
-                            <p>Copa de vino tinto de Mendoza.</p>
+                            <p>Botella</p>
+                            <span>€</span>
+                            <p>Copa</p>
                             <span>€</span>
                         </li>
                         <li>
