--- a/menu.html
+++ b/menu.html
@@ -132,7 +132,7 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="logo.png" alt="Logo"></a>
             </div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya, Olesa de Montserrat, Barcelona</p>
