--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
     <header>
         <div class="logo">
-    <a href="#"><img src="logo.png" alt="Logo"></a>
-</div>
+            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -32,19 +31,14 @@
     <main>
         <section class="hero">
             <div class="carrusel">
-    <div class="carrusel-imagenes">
-        <img src="plato1.jpg" alt="Empanadas" class="active">
-        <img src="plato2.jpg" alt="Lomito">
-        <img src="plato3.jpg" alt="Pizza">
-    </div>
-    <div class="carrusel-controles">
-        <button onclick="cambiarImagen(-1)">❮</button>
-        <button onclick="cambiarImagen(1)">❯</button>
-    </div>
-</div>
+                <div class="carrusel-imagenes">
+                    <img src="img/plato1.jpg" alt="Empanadas" class="active">
+                    <img src="img/plato2.jpg" alt="Lomito">
+                    <img src="img/plato3.jpg" alt="Pizza">
+                </div>
                 <div class="carrusel-controles">
-                    <button onclick="cambiarImagen(-1)">&#10094;</button>
-                    <button onclick="cambiarImagen(1)">&#10095;</button>
+                    <button onclick="cambiarImagen(-1)">❮</button>
+                    <button onclick="cambiarImagen(1)">❯</button>
                 </div>
             </div>
             <h1>Bienvenidos a Los chicos argentinos</h1>
@@ -56,25 +50,25 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-    <a href="#"><img src="logo.png" alt="Logo"></a>
-</div>
+                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+            </div>
             <div class="footer-info">
                 <p>Rambla de Catalunya, 60, 08640 (Olesa de Montserrat)</p>
-                <p>Tel: +34</p>
+                <p>Tel: 665641829</p>
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
-                <a href="#"><img src="facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
             </div>
         </div>
-    <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
+        <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
     </footer>
 
     <script src="script.js"></script>
     <a href="https://wa.me/1234567890?text=¡Hola!%20Quiero%20más%20información%20sobre%20Los%20chicos%20argentinos" class="whatsapp-btn" target="_blank">
-    <i class="fab fa-whatsapp"></i>
-</a>
+        <i class="fab fa-whatsapp"></i>
+    </a>
 </body>
 </html>
