--- a/menu.html
+++ b/menu.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explora el menú de Los chicos argentinos con platos tradicionales.">
     <title>Menú - Los chicos argentinos</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="logo.png" alt="Logo"></a>
+            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -41,13 +40,13 @@
                             <span>€</span>
                         </li>
                         <li>
-                            <h3>Empan "Gourmet"</h3>
+                            <h3>Empanadas "Gourmet"</h3>
                             <p>Variedad de sabores especiales.</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Alitas</h3>
-                            <p>c/verduritas</p>
+                            <p>Con salsa barbacoa o picante.</p>
                             <span>€</span>
                         </li>
                         <li>
@@ -82,18 +81,17 @@
                     <ul>
                         <li>
                             <h3>Alfajores</h3>
-                            <p>Rellenos de <strong>dulce de leche</strong>y coco rallado.</p>
+                            <p>Rellenos de <strong>dulce de leche</strong>.</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Facturitas</h3>
-                            <p>c/Dulce de leche</p>
-                            <p>c/crema pastelera</p>
+                            <p>1/2 docena a elegir.</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Pastafrola</h3>
-                            <p>c/<strong>dulce de membrillo</strong>.</p>
+                            <p>Rellena de <strong>dulce de membrillo</strong>.</p>
                             <span>€</span>
                         </li>
                         <li>
@@ -113,9 +111,7 @@
                     <ul>
                         <li>
                             <h3>Malbec Argentino</h3>
-                            <p>Botella</p>
-                            <span>€</span>
-                            <p>Copa</p>
+                            <p>Copa de vino tinto de Mendoza.</p>
                             <span>€</span>
                         </li>
                         <li>
@@ -132,7 +128,7 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <a href="index.html"><img src="logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
             </div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya, Olesa de Montserrat, Barcelona</p>
