--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="logo">
+            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -45,13 +46,13 @@
                 <div class="info-contacto">
                     <h2>Información de Contacto</h2>
                     <p><strong>Dirección:</strong> Rbla. de Catalunya 60, Olesa de Montserrat, Barcelona</p>
-                    <p><strong>Teléfono:</strong> +34</p>
+                    <p><strong>Teléfono:</strong> 665641829</p>
                     <p><strong>Email:</strong> info@loschicosargentinos.com</p>
                     <h3>Síguenos en redes sociales</h3>
                     <div class="redes-sociales">
-                        <a href="#"><img src="facebook.png" alt="Facebook"></a>
-                        <a href="#"><img src="instagram.png" alt="Instagram"></a>
-                        <a href="#"><img src="twitter.png" alt="Twitter"></a>
+                        <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
+                        <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+                        <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
                     </div>
                 </div>
             </div>
@@ -60,20 +61,18 @@
 
     <footer>
         <div class="footer-contenedor">
-           <div class="footer-logo">
-    <a href="#"><img src="logo.png" alt="Logo"></a>
-</div> <div class="footer-logo">
- <div class="footer-logo">
+            <div class="footer-logo">
+                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
             </div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya 60, Olesa de Montserrat, Barcelona</p>
-                <p>Tel: +34</p>
+                <p>Tel: 665641829</p>
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
-                <a href="#"><img src="facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
             </div>
         </div>
         <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
