--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+            <a href="index.html"><img src="logo.png" alt="Logo"></a>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -32,9 +32,9 @@
         <section class="hero">
             <div class="carrusel">
                 <div class="carrusel-imagenes">
-                    <img src="img/plato1.jpg" alt="Empanadas" class="active">
-                    <img src="img/plato2.jpg" alt="Lomito">
-                    <img src="img/plato3.jpg" alt="Pizza">
+                    <img src="plato1.jpg" alt="Empanadas" class="active">
+                    <img src="plato2.jpg" alt="Lomito">
+                    <img src="plato3.jpg" alt="Pizza">
                 </div>
                 <div class="carrusel-controles">
                     <button onclick="cambiarImagen(-1)">❮</button>
@@ -50,7 +50,7 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="logo.png" alt="Logo"></a>
             </div>
             <div class="footer-info">
                 <p>Rambla de Catalunya, 60, 08640 (Olesa de Montserrat)</p>
@@ -58,9 +58,9 @@
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
-                <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
             </div>
         </div>
         <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
