--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+            <a href="index.html"><img src="logo.png" alt="Logo"></a>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -81,17 +81,19 @@
                     <ul>
                         <li>
                             <h3>Alfajores</h3>
-                            <p>Rellenos de <strong>dulce de leche</strong>.</p>
+                            <p>Rellenos de <strong>dulce de leche y coco rallado</strong>.</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Facturitas</h3>
-                            <p>1/2 docena a elegir.</p>
+                            <p>c/Dulce de leche</p>
+                            <span>€</span>
+                            <p>c/Crema pastelera</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Pastafrola</h3>
-                            <p>Rellena de <strong>dulce de membrillo</strong>.</p>
+                            <p>c/<strong>Dulce de membrillo o de batata</strong>.</p>
                             <span>€</span>
                         </li>
                         <li>
@@ -101,7 +103,13 @@
                         </li>
                         <li>
                             <h3>Alfajor de Maicena</h3>
+                            <p>Cobertura de merengue, relleno de dulce de leche</p>
+                            <span>€</span>
                             <p>Relleno de <strong>dulce de leche y coco rallado</strong>.</p>
+                            <span>€</span>
+                            <p>Choco blanco o negro</p>
+                            <span>€</span>
+                            <p>Marmolado, <strong>chocolate blanco y negro</strong></p>
                             <span>€</span>
                         </li>
                     </ul>
@@ -110,25 +118,41 @@
                     <h2>Bebidas</h2>
                     <ul>
                         <li>
-                            <h3>Malbec Argentino</h3>
-                            <p>Copa de vino tinto de Mendoza.</p>
+                    <h2>Cervezas</h2>
+                            <h3>Cerveza Buenos Ayres (La Rubia)<p>
+                            <span>€</span>
+                            <h3>Cerveza Buenos Ayres ("Dark Beer")</h3>
+                            <span>€</span>
+                        </li>
+                    <h2>Vino Tinto</h2>
+                            <h3>Malbec Argentino (D.O Mendoza)</h3>
+                            <p>Botella</p>
+                            <span>€</span>
+                            <p>Copa</p>
+                            <span>€</span>
+                        <li>
+                    <h2>Vino Blanco</h2>
+                            <h3>Alamos</h3>
+                            <p>Botella</p>
+                            <span>€</span>
+                            <p>Copa</p>
                             <span>€</span>
                         </li>
                         <li>
+                    <h2>"El clásico"<h2>
                             <h3>Fernet con Cola</h3>
-                            <p>Clásico argentino, <strong>servido con hielo</strong>.</p>
+                            <p>Clásico argentino, <strong>*se sirve con hielo*</strong>.</p>
                             <span>€</span>
-                        </li>
+                    </li>
                     </ul>
-                </div>
-            </div>
+                    </div>
         </section>
     </main>
 
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="logo.png" alt="Logo"></a>
             </div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya, Olesa de Montserrat, Barcelona</p>
@@ -136,9 +160,9 @@
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
-                <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
             </div>
         </div>
         <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
