--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-            <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+            <a href="index.html"><img src="logo.png" alt="Logo"></a>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -50,9 +50,9 @@
                     <p><strong>Email:</strong> info@loschicosargentinos.com</p>
                     <h3>Síguenos en redes sociales</h3>
                     <div class="redes-sociales">
-                        <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                        <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                        <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+                        <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                        <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                        <a href="#"><img src="twitter.png" alt="Twitter"></a>
                     </div>
                 </div>
             </div>
@@ -62,7 +62,7 @@
     <footer>
         <div class="footer-contenedor">
             <div class="footer-logo">
-                <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+                <a href="index.html"><img src="logo.png" alt="Logo"></a>
             </div>
             <div class="footer-info">
                 <p>Rbla. de Catalunya 60, Olesa de Montserrat, Barcelona</p>
@@ -70,9 +70,9 @@
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
-                <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
             </div>
         </div>
         <p class="footer-copy">©·2025·Los chicos argentinos·.·Todos los derechos reservados.·</p>
