--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <p>Descubre la pasión y el sabor de la cocina argentina en Olesa de Montserrat, BCN</p>
             <a href="menu.html" class="btn">Ver Menú</a>
         </section>
+        <a href="https://wa.me/1234567890" class="btn-whatsapp" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+</a>
     </main>
 
     <footer>
