--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div class="logo">
+        <a href="#"><img src="logo.png" class="logo">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -32,17 +32,17 @@
             <div class="sobre-contenedor">
                 <div class="historia">
                     <h2>Nuestra Historia</h2>
-                    <p>Damián y Anabel, llegaron a Barcelona con un sueño: compartir la auténtica comida tradicional argentina con el mundo. Desde empanadas criollas hasta pizzas caseras, cada plato está preparado con amor y los mejores ingredientes, siguiendo recetas que han pasado de generación en generación.</p>
+                    <p>Damián y Anabel, llegaron a Barcelona con un sueño: compartir la auténtica comida tradicional argentina con el mundo. Desde empanadas criollas hasta pizzas caseras, cada plato está preparado con amor y los mejores ingredientes, siguiendo recetas que la tradición argentina.</p>
                     <p></p>
                 </div>
                 <div class="mision">
                     <h2>Objetivo</h2>
-                    <p>Su objetivo es llevar un pedacito de Argentina a cada rincón de la ciudad, creando experiencias culinarias únicas para sus clientes.</p>
+                    <p>Su objetivo es llevar un pedacito de Argentina a cada rincón, creando experiencias únicas para sus clientes.</p>
                    
                 </div>
                 <div class="equipo">
                     <h2>Nuestro Equipo</h2>
-                    <p>Damián y Anabel, una pareja apasionada por los sabores de su tierra natal, Argentina.</p>
+                    <p>Damián nos decanta con la calidad, el cariño y el compromiso con la tradición argentina y Anabel, siempre te va a hacer sentir como en casa con su atención casi personalizada. Son una pareja apasionada por los sabores de su tierra natal, Argentina.</p>
                 </div>
             </div>
         </section>
@@ -58,9 +58,9 @@
                 <p>Email: info@loschicosargentinos.com</p>
             </div>
             <div class="footer-redes">
-                <a href="#"><img src="img/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="img/instagram.png" alt="Instagram"></a>
-                <a href="#"><img src="img/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="twitter.png" alt="Twitter"></a>
             </div>
         </div>
         <p class="footer-copy">©·2025·Los chicos argentinos.·Todos los derechos reservados.·</p>
