Actualizar sobre-nosotros.html

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -46,6 +46,9 @@
                 </div>
             </div>
         </section>
+<a href="https://wa.me/665641829?text=¡Hola!%20Quiero%20más%20información%20sobre%20Los%20chicos%20argentinos" class="whatsapp-btn" target="_blank">
+    <img src="img/whatsapp.png" alt="WhatsApp">
+</a>
     </main>
 
     <footer>
