--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -46,9 +46,6 @@
                 </div>
             </div>
         </section>
-<a href="https://wa.me/665641829?text=¡Hola!%20Quiero%20más%20información%20sobre%20Los%20chicos%20argentinos" target="_blank">
-    Enviar mensaje por WhatsApp
-</a>
     </main>
 
     <footer>
@@ -70,5 +67,8 @@
     </footer>
 
     <script src="script.js"></script>
+     <a href="https://wa.me/665641829?text=¡Hola!%20Quiero%20más%20información%20sobre%20Los%20chicos%20argentinos" class="whatsapp-btn" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+    </a>
 </body>
 </html>
