Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <header>
         <div class="logo">
             <a href="index.html"><img src="logo.png" alt="Logo"></a>
+        <div>
+        <h1>Bienvenidos a Los chicos argentinos</h1>
+        </div>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
@@ -41,7 +44,7 @@
                     <button onclick="cambiarImagen(1)">❯</button>
                 </div>
             </div>
-            <h1>Bienvenidos a Los chicos argentinos</h1>
+            
             <p>Descubre la pasión y el sabor de la cocina argentina en Olesa de Montserrat, BCN</p>
             <a href="menu.html" class="btn">Ver Menú</a>
         </section>
