Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo">
             <a href="index.html"><img src="logo.png" alt="Logo"></a>
         <div>
-        <h1>Bienvenidos a Los chicos argentinos</h1>
+        <h1>Bienvenidos</h1>
         </div>
         </div>
         <nav id="nav-menu" class="nav-menu">
