Actualizar contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contáctanos en Los chicos argentinos para reservas o consultas.">
+    <meta name="description" content="Contáctanos para reservas o consultas.">
     <title>Contacto - Los chicos argentinos</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="menu.html">Menú</a></li>
-                <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+                <li><a href="sobre-nosotros.html">Nosotros</a></li>
                 <li><a href="contacto.html" class="active">Contacto</a></li>
             </ul>
         </nav>
