Actualizar menu.html

--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="menu.html" class="active">Menú</a></li>
-                <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
+                <li><a href="sobre-nosotros.html">Nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -29,7 +29,7 @@
 
     <main>
         <section class="menu">
-            <h1>Nuestro Menú</h1>
+            <h1>La Carta</h1>
             <div class="menu-contenedor">
                 <div class="categoria">
                     <h2>Entrantes</h2>
@@ -41,12 +41,11 @@
                         </li>
                         <li>
                             <h3>Empanadas "Gourmet"</h3>
-                            <p>Variedad de sabores especiales.</p>
+                            <p>Sabores especiales.</p>
                             <span>€</span>
                         </li>
                         <li>
                             <h3>Alitas</h3>
-                            <p>Con salsa barbacoa o picante.</p>
                             <span>€</span>
                         </li>
                         <li>
@@ -66,7 +65,7 @@
                         </li>
                         <li>
                             <h3>Pizzas</h3>
-                            <p>Variedad de opciones artesanales.</p>
+                            <p>Variedades artesanales.</p>
                             <span>€</span>
                         </li>
                         <li>
@@ -118,20 +117,20 @@
                     <h2>Bebidas</h2>
                     <ul>
                         <li>
-                    <h2>Cervezas</h2>
-                            <h3>Cerveza Buenos Ayres (La Rubia)<p>
+                    <h3>Cervezas</h3>
+                            <h3>Cerveza Buenos Ayres ("La Rubia")<p>
                             <span>€</span>
                             <h3>Cerveza Buenos Ayres ("Dark Beer")</h3>
                             <span>€</span>
                         </li>
-                    <h2>Vino Tinto</h2>
-                            <h3>Malbec Argentino (D.O Mendoza)</h3>
+                    <h3>Vino Tinto</h3>
+                            <h3>Malbec</h3>
                             <p>Botella</p>
                             <span>€</span>
                             <p>Copa</p>
                             <span>€</span>
                         <li>
-                    <h2>Vino Blanco</h2>
+                    <h3>Vino Blanco</h3>
                             <h3>Alamos</h3>
                             <p>Botella</p>
                             <span>€</span>
