Actualizar sobre-nosotros.html

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Conoce la historia y objetivos de Los chicos argentinos.">
-    <title>Sobre Nosotros - Los chicos argentinos</title>
+    <title>Nosotros - Los chicos argentinos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="menu.html">Menú</a></li>
-                <li><a href="sobre-nosotros.html" class="active">Sobre Nosotros</a></li>
+                <li><a href="sobre-nosotros.html" class="active">Nosotros</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -28,11 +28,11 @@
 
     <main>
         <section class="sobre-nosotros">
-            <h1>Sobre Nosotros</h1>
+            <h1>Nosotros</h1>
             <div class="sobre-contenedor">
                 <div class="historia">
-                    <h2>Nuestra Historia</h2>
-                    <p>Damián y Anabel, llegaron a Barcelona con un sueño: compartir la auténtica comida tradicional argentina con el mundo. Desde empanadas criollas hasta pizzas caseras, cada plato está preparado con amor y los mejores ingredientes, siguiendo recetas que la tradición argentina.</p>
+                    <h2>Historia</h2>
+                    <p>Damián y Anabel, llegaron a Barcelona con un cometido: compartir la auténtica comida tradicional argentina con el mundo. Desde empanadas criollas hasta pizzas caseras, cada plato está preparado con amor y los mejores ingredientes, siguiendo recetas de la tradición argentina.</p>
                     <p></p>
                 </div>
                 <div class="mision">
@@ -41,7 +41,8 @@
                    
                 </div>
                 <div class="equipo">
-                    <h2>Nuestro Equipo</h2>
+                    <h2>Equipo</h2>
+                    <h2>Los chicos argentinos</h2>
                     <p>Damián nos decanta con la calidad, el cariño y el compromiso con la tradición argentina y Anabel, siempre te va a hacer sentir como en casa con su atención casi personalizada. Son una pareja apasionada por los sabores de su tierra natal, Argentina.</p>
                 </div>
             </div>
