Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </section>
         <a href="https://wa.me/665641829" class="btn-whatsapp" target="_blank">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+        <i class="fab fa-whatsapp"></i>
 </a>
     </main>
 
