--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Los chicos argentinos - Disfruta de la auténtica cocina argentina en Olesa de Montserrat.">
     <title>Los chicos argentinos - Inicio</title>
     <link rel="stylesheet" href="style.css">
@@ -48,10 +48,10 @@
             <p>Descubre la pasión y el sabor de la cocina argentina en Olesa de Montserrat, BCN</p>
             <a href="menu.html" class="btn">Ver Menú</a>
         </section>
-        <a href="https://wa.me/665641829" class="btn-whatsapp" target="_blank">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" />
+     
+       <a href="https://wa.me/665641829?text=¡Hola!%20Quiero%20más%20información%20sobre%20Los%20chicos%20argentinos" class="whatsapp-btn" target="_blank">
         <i class="fab fa-whatsapp"></i>
-</a>
+    </a>
     </main>
 
     <footer>
@@ -74,6 +74,7 @@
     </footer>
 
     <script src="script.js"></script>
+
     <a href="https://wa.me/665641829?text=¡Hola!%20Quiero%20más%20información%20sobre%20Los%20chicos%20argentinos" class="whatsapp-btn" target="_blank">
         <i class="fab fa-whatsapp"></i>
     </a>
