Actualizar sobre-nosotros.html

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="#"><img src="logo.png" class="logo">
+        <div class="logo">
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
