--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="logo">
+     <a href="index.html"><img src="logo.png" alt="Logo"></a>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
