Actualizar contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -79,5 +79,9 @@
     </footer>
 
     <script src="script.js"></script>
+     
+<a href="https://wa.me/665641829?text=¡Hola!%20Quiero%20más%20información%20sobre%20Los%20chicos%20argentinos" class="whatsapp-btn" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</a>
 </body>
 </html>
