--- a/menu.html
+++ b/menu.html
@@ -12,6 +12,7 @@
         <div class="logo">
             <a href="index.html"><img src="logo.png" alt="Logo"></a>
         </div>
+        <h1>La Carta</h1>
         <nav id="nav-menu" class="nav-menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
