--- a/menu.html
+++ b/menu.html
@@ -11,8 +11,9 @@
     <header>
         <div class="logo">
             <a href="index.html"><img src="logo.png" alt="Logo"></a>
+        <div>
+        <h2>Menú</h2>
         </div>
-        <h1>La Carta</h1>
         <nav id="nav-menu" class="nav-menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
