Actualizar contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -11,6 +11,8 @@
     <header>
         <div class="logo">
             <a href="index.html"><img src="logo.png" alt="Logo"></a>
+        <div>
+        <h2>Contacto</h2>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
