Actualizar sobre-nosotros.html

--- a/sobre-nosotros.html
+++ b/sobre-nosotros.html
@@ -11,13 +11,15 @@
     <header>
         <div class="logo">
      <a href="index.html"><img src="logo.png" alt="Logo"></a>
+        <div>
+        <h2>Sobre nosotros</h2>
         </div>
         <nav id="nav-menu" class="nav-menu">
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="menu.html">Menú</a></li>
                 <li><a href="sobre-nosotros.html" class="active">Nosotros</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
         <div class="hamburger" onclick="toggleMenu()">
@@ -26,16 +28,16 @@
             <span></span>
         </div>
     </header>
-
     <main>
         <section class="sobre-nosotros">
             <h1>Nosotros</h1>
             <div class="sobre-contenedor">
                 <div class="historia">
-                    <h2>Historia</h2>
-                    <p>Damián y Anabel, llegaron a Barcelona con un cometido: compartir la auténtica comida tradicional argentina con el mundo. Desde empanadas criollas hasta pizzas caseras, cada plato está preparado con amor y los mejores ingredientes, siguiendo recetas de la tradición argentina.</p>
+
+                  <h2>Historia</h2>
+ <p>Damián y Anabel, llegaron a Barcelona con un cometido: compartir la auténtica comida tradicional argentina con el mundo. Desde empanadas criollas hasta pizzas caseras, cada plato está preparado con amor y los mejores ingredientes, siguiendo recetas de la tradición argentina.</p>
                     
-                </div>
+</div>
                 <div class="mision">
                     <h2>Objetivo</h2>
                     <p>Su objetivo es llevar un pedacito de Argentina a cada rincón, creando experiencias únicas para sus clientes.</p>
